fixed videos on mobile and made videos load quicker

--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,18 @@ html {
   margin-bottom: 10vh;
   width: 65vh;
   background-color: rgba(0, 0, 0, 0.178);
+  animation: leFadeInLeft 1.3s ease-in-out forwards; /* Apply animation */
+}
+
+@keyframes leFadeInLeft {
+  from {
+    opacity: 0;
+    transform: translateX(-60px); /* Start position off to the left */
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0); /* End at the original position */
+  }
 }
 
 .welcome h1,
@@ -90,7 +102,7 @@ h3 {
   align-items: center; /* Centers vertically within the flex container */
   justify-content: center; /* Centers horizontally */
   opacity: 0; /*Set back to 0!!!!!!!!*/
-  transition: opacity 1s ease;
+  transition: opacity 1.5s ease;
   gap: 60px;
 }
 
@@ -131,7 +143,7 @@ h3 {
   height: auto;
   opacity: 0; /*Set back to 0!!!!!!!!*/
   pointer-events: none;
-  transition: opacity 1s ease;
+  transition: opacity 1.5s ease;
   padding-left: 30px;
   padding-right: 30px;
 }
@@ -188,7 +200,7 @@ h3 {
   text-underline-offset: 5px;
   font-size: 1.7vh;
   opacity: 0;
-  transition: opacity 0.5s ease;
+  transition: opacity 1.5s ease;
   width: 100%;
 }
 
@@ -304,6 +316,7 @@ h3 {
 .card-title {
   margin-bottom: 5px;
   text-decoration: underline;
+  text-underline-offset: 5px;
 }
 
 .card video {
